fix: Fixed title display on mobile

--- a/index.css
+++ b/index.css
@@ -64,17 +64,18 @@ html {
 #title {
     position: absolute;
     bottom: .5em;
-    right: 1em;
+    right: .5em;
+    margin-left: .5em;
     font-family: "Ubuntu Mono", monospace;
     font-weight: 800;
     font-size: 100pt;
     line-height: .8;
 }
 
-@media (orientation: portrait) {
+@media screen and (max-width: 1360px) and (orientation: portrait) {
     #title {
-        font-size: 40pt;
-        right: .25em
+        font-size: 46pt;
+        /* right: .25em */
     }
 }
 
